# optical-flow-filter

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md
demos/flowProfiler/: CMakeLists.txt
demos/flowProfiler/src/: flowProfiler.cpp
demos/flowWebCam/: CMakeLists.txt
demos/flowWebCam/src/: flowWebCam.cpp
demos/highSpeedDemo/: CMakeLists.txt  acA2000-165um_binSkip.pfs
demos/highSpeedDemo/src/: CMakeLists.txt  camera.cpp  camera.h  flowwidgets.cpp  flowwidgets.h  flowwrappers.cpp  flowwrappers.h  main.cpp
include/flowfilter/: colorwheel.h  image.h  osconfig.h
include/flowfilter/gpu/: camera.h  display.h  error.h  flowfilter.h  flowsmoothing.h  gpu_deleter.h  image.h  imagemodel.h  pipeline.h  propagation.h  pyramid.h  rotation.h  update.h  util.h
include/flowfilter/gpu/device/: camera_k.h  display_k.h  flowsmoothing_k.h  image_k.h  imagemodel_k.h  math_k.h  misc_k.h  propagation_k.h  pyramid_k.h  rotation_k.h  update_k.h
matlab/: .gitignore  FlowFilter.m  FlowFilter_mex.cpp  GPUImage.m  GPUImage_mex.cpp  ImageModel.m  ImageModel_mex.cpp  PyramidalFlowFilter.m  PyramidalFlowFilter_mex.cpp  buildmex.m  testFlowFilter.m  testGPUImage.m  testImageModel.m  testPyramidalFlowFilter.m
matlab/include/: classHandle.h  imgutil.h
matlab/src/: imgutil.cpp
notebooks/: .gitignore  GPU_example.ipynb
python/: .gitignore  setup.cfg  setup.py
python/flowfilter/: __init__.py  flowfilter.py  groundtruth.py  image.pxd  image.pyx  misc.py  plot.py  propagation.py  rotation.py  update.py
python/flowfilter/gpu/: camera.pxd  camera.pyx  display.pxd  display.pyx  flowfilter.pxd  flowfilter.pyx  flowfilters.pxd  flowfilters.pyx  image.pxd  image.pyx  imagemodel.pxd  imagemodel.pyx  propagation.pxd  propagation.pyx  pyramid.pxd  pyramid.pyx  rotation.pxd  rotation.pyx  update.pxd  update.pyx
python/flowfilter/rsc/: __init__.py
src/: CMakeLists.txt  colorwheel.cpp  colorwheeldark.cpp  image.cpp
src/gpu/: CMakeLists.txt  camera.cu  display.cu  error.cu  flowfilter.cu  flowsmoothing.cu  image.cu  imagemodel.cu  pipeline.cu  propagation.cu  pyramid.cu  rotation.cu  update.cu  util.cu
src/gpu/device/: CMakeLists.txt  display_k.cu  flowsmoothing_k.cu  imagemodel_k.cu  misc_k.cu  propagation_k.cu  pyramid_k.cu  rotation_k.cu  update_k.cu
